[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://MultiPlayerWorld.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 808.462, 17.5959 )

[node name="MultiPlayerWorld" type="Node2D"]
script = ExtResource( 2 )

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2( 500, 590 )
__meta__ = {
"_edit_group_": true
}

[node name="icon" type="Sprite" parent="floor"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 25, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
shape = SubResource( 1 )

[node name="MyName" type="Label" parent="."]
margin_left = 78.1064
margin_top = 39.0532
margin_right = 350.106
margin_bottom = 95.0532
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 281.741, 482.586 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 596.956, 490.955 )

[node name="UpdatePosTimer" type="Timer" parent="."]
[connection signal="timeout" from="UpdatePosTimer" to="." method="_on_UpdatePosTimer_timeout"]
